[package]
edition = "2021"
name = "stm32f0-template"
version = "0.1.0"

[dependencies]
embassy-stm32 = { version = "0.1.0", features = ["nightly", "defmt", "memory-x", "stm32f031k6", "time-driver-any", "exti", "unstable-pac"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = "0.3"
embassy-sync = { version = "0.2.0", features = ["defmt"] }
embassy-executor = { version = "0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.2", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
static_cell = { version = "1.1", features = ["nightly"]}

[profile.release]
debug = 2

[[bin]]
name = "stm32f0-template"
test = false
bench = false

[patch.crates-io]
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "88146eb53e40ea2ab43c2db77f3f62c6d08c9b36" }